# eth-interactor-rs

./: Cargo.toml  README.md
contracts/: hello_world.json  hello_world.sol
src/: main.rs
