[package]
name = "ethereum-interactor"
version = "0.1.0"
authors = ["leeduckgo <albertschr@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
# For examples
env_logger = "0.9"
hex-literal = "0.3"
wasm-bindgen-test = "0.3.19"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
hex = "0.4.3"